IdeaProjects/proyecto_3/src/generated/GParser.java
// Generated from C:/Users/Pruebas/IdeaProjects/proyecto_1\GParser.g4 by ANTLR 4.6
package generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, ParenIZQ=3, ParenDER=4, DosPUNTOS=5, COMA=6, DEF=7, 
		IF=8, ELSE=9, WHILE=10, RETURN=11, PRINT=12, MENOR=13, MAYOR=14, MenorIGUAL=15, 
		MayorIGUAL=16, IgualIGUAL=17, SUMA=18, RESTA=19, MULT=20, DIV=21, ParenSubIZQ=22, 
		ParenSubDER=23, NewLINE=24, IGUAL=25, LEN=26, INT=27, STRING=28, ID=29, 
		WS=30, CHAR=31, LINE_COMMENT=32, SPECIAL_COMMENT=33;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_defStatement = 2, RULE_argList = 3, 
		RULE_moreArgs = 4, RULE_ifStatement = 5, RULE_whileStatement = 6, RULE_returnStatement = 7, 
		RULE_printStatement = 8, RULE_assignStatement = 9, RULE_functionCallStatement = 10, 
		RULE_sequence = 11, RULE_moreStatement = 12, RULE_expression = 13, RULE_comparison = 14, 
		RULE_comparisonValores = 15, RULE_additionExpression = 16, RULE_additionFactor = 17, 
		RULE_factoresSumaResta = 18, RULE_multiplicationExpression = 19, RULE_multiplicationFactor = 20, 
		RULE_factoresMultDiv = 21, RULE_elementExpression = 22, RULE_elementAccess = 23, 
		RULE_functionCallExpression = 24, RULE_expressionList = 25, RULE_moreExpressions = 26, 
		RULE_primitiveExpression = 27, RULE_listExpression = 28;
	public static final String[] ruleNames = {
		"program", "statement", "defStatement", "argList", "moreArgs", "ifStatement", 
		"whileStatement", "returnStatement", "printStatement", "assignStatement", 
		"functionCallStatement", "sequence", "moreStatement", "expression", "comparison", 
		"comparisonValores", "additionExpression", "additionFactor", "factoresSumaResta", 
		"multiplicationExpression", "multiplicationFactor", "factoresMultDiv", 
		"elementExpression", "elementAccess", "functionCallExpression", "expressionList", 
		"moreExpressions", "primitiveExpression", "listExpression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'('", "')'", "':'", "','", "'def'", "'if'", "'else'", 
		"'while'", "'return'", "'print'", "'<'", "'>'", "'<='", "'>='", "'=='", 
		"'+'", "'-'", "'*'", "'/'", "'['", "']'", null, "'='", "'len'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INDENT", "DEDENT", "ParenIZQ", "ParenDER", "DosPUNTOS", "COMA", 
		"DEF", "IF", "ELSE", "WHILE", "RETURN", "PRINT", "MENOR", "MAYOR", "MenorIGUAL", 
		"MayorIGUAL", "IgualIGUAL", "SUMA", "RESTA", "MULT", "DIV", "ParenSubIZQ", 
		"ParenSubDER", "NewLINE", "IGUAL", "LEN", "INT", "STRING", "ID", "WS", 
		"CHAR", "LINE_COMMENT", "SPECIAL_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StamentprogramContext extends ProgramContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode EOF() { return getToken(GParser.EOF, 0); }
		public StamentprogramContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitStamentprogram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new StamentprogramContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			statement();
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ParenIZQ) | (1L << DEF) | (1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << PRINT) | (1L << ParenSubIZQ) | (1L << LEN) | (1L << INT) | (1L << STRING) | (1L << ID) | (1L << CHAR))) != 0)) {
				{
				{
				setState(59);
				statement();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssigstamentcallContext extends StatementContext {
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public AssigstamentcallContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitAssigstamentcall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintstamentcallContext extends StatementContext {
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public PrintstamentcallContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitPrintstamentcall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhilestamentcallContext extends StatementContext {
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public WhilestamentcallContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitWhilestamentcall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnstamentcallContext extends StatementContext {
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public ReturnstamentcallContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitReturnstamentcall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfstamentcallContext extends StatementContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public IfstamentcallContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitIfstamentcall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DefstamentcallContext extends StatementContext {
		public DefStatementContext defStatement() {
			return getRuleContext(DefStatementContext.class,0);
		}
		public DefstamentcallContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitDefstamentcall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctioncallstamentcallContext extends StatementContext {
		public FunctionCallStatementContext functionCallStatement() {
			return getRuleContext(FunctionCallStatementContext.class,0);
		}
		public FunctioncallstamentcallContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitFunctioncallstamentcall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new DefstamentcallContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				defStatement();
				}
				break;
			case 2:
				_localctx = new IfstamentcallContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				ifStatement();
				}
				break;
			case 3:
				_localctx = new ReturnstamentcallContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				returnStatement();
				}
				break;
			case 4:
				_localctx = new PrintstamentcallContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				printStatement();
				}
				break;
			case 5:
				_localctx = new WhilestamentcallContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				whileStatement();
				}
				break;
			case 6:
				_localctx = new AssigstamentcallContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(72);
				assignStatement();
				}
				break;
			case 7:
				_localctx = new FunctioncallstamentcallContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(73);
				functionCallStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefStatementContext extends ParserRuleContext {
		public DefStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defStatement; }
	 
		public DefStatementContext() { }
		public void copyFrom(DefStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DefstamentfunContext extends DefStatementContext {
		public TerminalNode DEF() { return getToken(GParser.DEF, 0); }
		public TerminalNode ID() { return getToken(GParser.ID, 0); }
		public TerminalNode ParenIZQ() { return getToken(GParser.ParenIZQ, 0); }
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public TerminalNode ParenDER() { return getToken(GParser.ParenDER, 0); }
		public TerminalNode DosPUNTOS() { return getToken(GParser.DosPUNTOS, 0); }
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public DefstamentfunContext(DefStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitDefstamentfun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefStatementContext defStatement() throws RecognitionException {
		DefStatementContext _localctx = new DefStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defStatement);
		try {
			_localctx = new DefstamentfunContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(DEF);
			setState(77);
			match(ID);
			setState(78);
			match(ParenIZQ);
			setState(79);
			argList();
			setState(80);
			match(ParenDER);
			setState(81);
			match(DosPUNTOS);
			setState(82);
			sequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgListContext extends ParserRuleContext {
		public ArgListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argList; }
	 
		public ArgListContext() { }
		public void copyFrom(ArgListContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IdarglistContext extends ArgListContext {
		public TerminalNode ID() { return getToken(GParser.ID, 0); }
		public MoreArgsContext moreArgs() {
			return getRuleContext(MoreArgsContext.class,0);
		}
		public IdarglistContext(ArgListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitIdarglist(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EspacarglistContext extends ArgListContext {
		public EspacarglistContext(ArgListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitEspacarglist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgListContext argList() throws RecognitionException {
		ArgListContext _localctx = new ArgListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_argList);
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				_localctx = new IdarglistContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				match(ID);
				setState(85);
				moreArgs();
				}
				break;
			case ParenDER:
				_localctx = new EspacarglistContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoreArgsContext extends ParserRuleContext {
		public MoreArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moreArgs; }
	 
		public MoreArgsContext() { }
		public void copyFrom(MoreArgsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MoreargsfunContext extends MoreArgsContext {
		public List<TerminalNode> COMA() { return getTokens(GParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(GParser.COMA, i);
		}
		public List<TerminalNode> ID() { return getTokens(GParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GParser.ID, i);
		}
		public MoreargsfunContext(MoreArgsContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitMoreargsfun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MoreArgsContext moreArgs() throws RecognitionException {
		MoreArgsContext _localctx = new MoreArgsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_moreArgs);
		int _la;
		try {
			_localctx = new MoreargsfunContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(89);
				match(COMA);
				setState(90);
				match(ID);
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	 
		public IfStatementContext() { }
		public void copyFrom(IfStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfstamentfunContext extends IfStatementContext {
		public TerminalNode IF() { return getToken(GParser.IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> DosPUNTOS() { return getTokens(GParser.DosPUNTOS); }
		public TerminalNode DosPUNTOS(int i) {
			return getToken(GParser.DosPUNTOS, i);
		}
		public List<SequenceContext> sequence() {
			return getRuleContexts(SequenceContext.class);
		}
		public SequenceContext sequence(int i) {
			return getRuleContext(SequenceContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(GParser.ELSE, 0); }
		public IfstamentfunContext(IfStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitIfstamentfun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifStatement);
		try {
			_localctx = new IfstamentfunContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(IF);
			setState(97);
			expression();
			setState(98);
			match(DosPUNTOS);
			setState(99);
			sequence();
			setState(100);
			match(ELSE);
			setState(101);
			match(DosPUNTOS);
			setState(102);
			sequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStatementContext extends ParserRuleContext {
		public WhileStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStatement; }
	 
		public WhileStatementContext() { }
		public void copyFrom(WhileStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WhilestamentfunContext extends WhileStatementContext {
		public TerminalNode WHILE() { return getToken(GParser.WHILE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DosPUNTOS() { return getToken(GParser.DosPUNTOS, 0); }
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public WhilestamentfunContext(WhileStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitWhilestamentfun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileStatementContext whileStatement() throws RecognitionException {
		WhileStatementContext _localctx = new WhileStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_whileStatement);
		try {
			_localctx = new WhilestamentfunContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(WHILE);
			setState(105);
			expression();
			setState(106);
			match(DosPUNTOS);
			setState(107);
			sequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
	 
		public ReturnStatementContext() { }
		public void copyFrom(ReturnStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ReturnstamentfunContext extends ReturnStatementContext {
		public TerminalNode RETURN() { return getToken(GParser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode NewLINE() { return getToken(GParser.NewLINE, 0); }
		public ReturnstamentfunContext(ReturnStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitReturnstamentfun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_returnStatement);
		try {
			_localctx = new ReturnstamentfunContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(RETURN);
			setState(110);
			expression();
			setState(111);
			match(NewLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintStatementContext extends ParserRuleContext {
		public PrintStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStatement; }
	 
		public PrintStatementContext() { }
		public void copyFrom(PrintStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrintstamentfunContext extends PrintStatementContext {
		public TerminalNode PRINT() { return getToken(GParser.PRINT, 0); }
		public TerminalNode ParenIZQ() { return getToken(GParser.ParenIZQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ParenDER() { return getToken(GParser.ParenDER, 0); }
		public TerminalNode NewLINE() { return getToken(GParser.NewLINE, 0); }
		public PrintstamentfunContext(PrintStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitPrintstamentfun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintStatementContext printStatement() throws RecognitionException {
		PrintStatementContext _localctx = new PrintStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_printStatement);
		try {
			_localctx = new PrintstamentfunContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(PRINT);
			setState(114);
			match(ParenIZQ);
			setState(115);
			expression();
			setState(116);
			match(ParenDER);
			setState(117);
			match(NewLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStatementContext extends ParserRuleContext {
		public AssignStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStatement; }
	 
		public AssignStatementContext() { }
		public void copyFrom(AssignStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssigstamentfunContext extends AssignStatementContext {
		public TerminalNode ID() { return getToken(GParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(GParser.IGUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode NewLINE() { return getToken(GParser.NewLINE, 0); }
		public AssigstamentfunContext(AssignStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitAssigstamentfun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignStatementContext assignStatement() throws RecognitionException {
		AssignStatementContext _localctx = new AssignStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignStatement);
		try {
			_localctx = new AssigstamentfunContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(ID);
			setState(120);
			match(IGUAL);
			setState(121);
			expression();
			setState(122);
			match(NewLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallStatementContext extends ParserRuleContext {
		public FunctionCallStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCallStatement; }
	 
		public FunctionCallStatementContext() { }
		public void copyFrom(FunctionCallStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FunctcallstamentfunContext extends FunctionCallStatementContext {
		public PrimitiveExpressionContext primitiveExpression() {
			return getRuleContext(PrimitiveExpressionContext.class,0);
		}
		public TerminalNode ParenIZQ() { return getToken(GParser.ParenIZQ, 0); }
		public ExpressionListContext expressionList() {
			return getRuleContext(ExpressionListContext.class,0);
		}
		public TerminalNode ParenDER() { return getToken(GParser.ParenDER, 0); }
		public TerminalNode NewLINE() { return getToken(GParser.NewLINE, 0); }
		public FunctcallstamentfunContext(FunctionCallStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GParserVisitor ) return ((GParserVisitor<? extends T>)visitor).visitFunctcallstamentfun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionCallStatementContext functionCallStatement() throws RecognitionException {
		FunctionCallStatementContext _localctx = new FunctionCallStatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_functionCallStatement);
		try {
			_localctx = new FunctcallstamentfunContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			primitiveExpression();
			setState(125);
			match(ParenIZQ);
			setState(126);
			expressionList();
			setState(127);
			match(ParenDER);
			setState(128);
			match(NewLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
